derive/tests/snapshots/soft_delete_timestamp/Ticket/soft_delete_tickets_by_priority.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Try to soft-delete all `Ticket` rows in the `ticket` table whose value matches the value from the single-column btree index on the `priority` column.
    pub fn soft_delete_tickets_by_priority<'a>(
        &'a self,
        priority: &'a u8,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let priority = priority;
        let rows_to_delete: Vec<Ticket> = self
            .db()
            .ticket()
            .priority()
            .filter(priority)
            .filter(|row| !(row.retired_at.is_some()))
            .collect();
        if rows_to_delete.is_empty() {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "ticket".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entries = std::collections::HashMap::new();
        for row_to_delete in &rows_to_delete {
            deletion_result_entries
                .insert(
                    &row_to_delete.id,
                    crate::spacetimedsl::delete::DeletionResultEntry {
                        table_name: "ticket".into(),
                        column_name: "id".into(),
                        strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
                        row_value: format!("{}", TicketId::new(row_to_delete.id.clone()))
                            .into(),
                        child_entries: vec![],
                    },
                );
        }
        for old_row in &rows_to_delete {
            let mut new_row = old_row.clone();
            new_row
                .retired_at = Some(
                self.ctx().timestamp().expect("a `WriteContext` always has a timestamp"),
            );
            self.db().ticket().id().update(new_row);
        }
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "ticket".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
            entries: deletion_result_entries.into_values().collect_vec(),
            error_from_hook: None,
        });
    }
}
