derive/tests/snapshots/soft_delete_timestamp/Ticket/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct TicketId {
    value: u64,
}
impl Default for TicketId {
    fn default() -> TicketId {
        TicketId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for TicketId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "TicketId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for TicketId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Ticket> for TicketId {
    fn from(value: &Ticket) -> Self {
        TicketId {
            value: value.id.clone(),
        }
    }
}
impl From<&Ticket> for Option<TicketId> {
    fn from(value: &Ticket) -> Option<TicketId> {
        Some(TicketId {
            value: value.id.clone(),
        })
    }
}
impl From<&TicketId> for Option<TicketId> {
    fn from(value: &TicketId) -> Option<TicketId> {
        use crate::spacetimedsl::Wrapper;
        Some(TicketId::new(value.value()))
    }
}
impl From<&TicketId> for TicketId {
    fn from(value: &TicketId) -> Self {
        use crate::spacetimedsl::Wrapper;
        TicketId::new(value.value())
    }
}
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct TicketReference {
    value: String,
}
impl Default for TicketReference {
    fn default() -> TicketReference {
        TicketReference {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for TicketReference {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "TicketReference", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<String> for TicketReference {
    fn new(value: String) -> Self {
        Self { value }
    }
    fn value(&self) -> String {
        self.value.clone()
    }
}
impl From<&Ticket> for TicketReference {
    fn from(value: &Ticket) -> Self {
        TicketReference {
            value: value.reference.clone(),
        }
    }
}
impl From<&Ticket> for Option<TicketReference> {
    fn from(value: &Ticket) -> Option<TicketReference> {
        Some(TicketReference {
            value: value.reference.clone(),
        })
    }
}
impl From<&TicketReference> for Option<TicketReference> {
    fn from(value: &TicketReference) -> Option<TicketReference> {
        use crate::spacetimedsl::Wrapper;
        Some(TicketReference::new(value.value()))
    }
}
impl From<&TicketReference> for TicketReference {
    fn from(value: &TicketReference) -> Self {
        use crate::spacetimedsl::Wrapper;
        TicketReference::new(value.value())
    }
}
impl Ticket {
    ///
    pub fn get_id(&self) -> TicketId {
        use crate::spacetimedsl::Wrapper;
        TicketId::new(self.id.clone())
    }
    ///
    pub fn get_reference(&self) -> TicketReference {
        use crate::spacetimedsl::Wrapper;
        TicketReference::new(self.reference.clone())
    }
    ///
    pub fn set_reference(&mut self, reference: String) -> TicketReference {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.reference, reference);
        TicketReference::new(old_value)
    }
    ///
    pub fn get_priority(&self) -> &u8 {
        use crate::spacetimedsl::Wrapper;
        &self.priority
    }
    ///
    pub fn get_priority_mut(&mut self) -> &mut u8 {
        use crate::spacetimedsl::Wrapper;
        &mut self.priority
    }
    ///
    pub fn set_priority(&mut self, priority: u8) -> u8 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.priority, priority);
        old_value
    }
    ///
    pub fn get_retired_at(&self) -> &Option<spacetimedb::Timestamp> {
        use crate::spacetimedsl::Wrapper;
        &self.retired_at
    }
}
///
pub struct CreateTicket {
    pub reference: String,
    pub priority: u8,
}

// Generated DSL methods:
// count_of_all_tickets
// create_ticket
// delete_ticket_by_id
// delete_ticket_by_reference
// delete_tickets_by_priority
// get_all_tickets
// get_ticket_by_id
// get_ticket_by_reference
// get_tickets_by_priority
// soft_delete_ticket_by_id
// soft_delete_ticket_by_reference
// soft_delete_tickets_by_priority
// update_ticket_by_id
